# water-sort

./: .gitignore  Cargo.toml  lint.sh
data/: 1-day7.json  195.json  222.json  223.json  224.json  227.json  228.json  229.json  230.json  233.json  test.json
src/: main.rs  puzzle.rs  repl.rs  solve.rs  state.rs  tube.rs  water.rs
