[package]
name = "water-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
rustyline = "10.1.1"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.93"
